# deepin-desktop-theme

./: CMakeLists.txt  README.md  README.zh_CN.md
.obs/: workflows.yml
.reuse/: dep5
bloom-dark/: CMakeLists.txt
bloom/dsg-icons/: bloom-dark
debian/: changelog  control  copyright  deepin-desktop-theme.install  deepin-desktop-theme.postinst  deepin-desktop-theme.triggers  deepin-theme-bloom.install  deepin-theme-hazy-color.install  deepin-theme-nirvana.install  deepin-theme-organic-glass.install  deepin-theme-origin.install  deepin-theme-v23-icon.install  deepin-theme-vintage.install  deepin-xdgicon-convert.install  rules
icons/: Acetino2.dci  UosAiAssistant.dci  aTrust.dci  ai-meeting-assistant.dci  application-odf.dci  application-pdf.dci  application-pkix-cert.dci  application-vnd.flatpak.dci  application-vnd.google-apps.drawing.dci  application-vnd.insync.link.drive.link.dci  application-vnd.kde.bluedevil-sendfile.dci  application-vnd.ms-cab-compressed.dci  application-vnd.oasis.opendocument.chart.dci  application-vnd.oasis.opendocument.formula-template.dci  application-vnd.sun.xml.calc.template.dci  application-vnd.sun.xml.math.dci  application-vnd.wolfram.cdf.dci  application-winhlp.dci  application-wps-office.et.dci  application-x-codeblocks-workspace.dci  application-x-designer.dci  application-x-dia-diagram.dci  application-x-dwg.dci  application-x-extension-fcstd.dci  application-x-font-ttf.dci  application-x-gettext-translation.dci  application-x-glade.dci  application-x-ipynb+json.dci  application-x-iso9660-appimage.dci  application-x-kdenlive.dci  application-x-kmymoney.dci  application-x-msdos-program.dci  application-x-nzb.dci  application-x-ruby.dci  application-x-sharedlib.dci  application-x-sketch.dci  application-x-smb-workgroup.dci  application-x-virtualbox-ova.dci  application-x-virtualbox-vbox.dci  application-x-wine-extension-msp.dci  (+126 more)
macaron/: CMakeLists.txt
origin/: CMakeLists.txt
tools/: CMakeLists.txt
tools/deepin-xdgicon-convert/: CMakeLists.txt
tools/deepin-xdgicon-convert/misc/: deepin-xdgicon-convert.desktop
tools/deepin-xdgicon-convert/src/: convertworker.cpp  convertworker.h  filechooserwidget.cpp  filechooserwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
tools/deepin-xdgicon-convert/src/res/: convert.dci  main.qrc
tools/deepin-xdgicon-convert/translations/: deepin-xdgicon-convert_zh_CN.ts
tools/xdgicon2dci/: CMakeLists.txt  main.cpp
vintage/dsg-icons/: application-dxf.dci  application-epub+zip.dci  application-gpx.dci  application-json.dci  application-pdf.dci  application-pgp-keys.dci  application-vnd.google-apps.form.dci  application-vnd.kde.kphotoalbum-import.dci  application-vnd.nokia.xml.qt.resource.dci  application-vnd.oasis.opendocument.database.dci  application-vnd.scribus.dci  application-vnd.sun.xml.impress.dci  application-vnd.sun.xml.impress.template.dci  application-vnd.sun.xml.math.dci  application-vnd.wolfram.cdf.dci  application-winhlp.dci  application-wps-office.wps.dci  application-x-ace.dci  application-x-audacity-project.dci  application-x-cd-image.dci  application-x-codeblocks.dci  application-x-ddf.dci  application-x-dia-diagram.dci  application-x-emerald-theme.dci  application-x-executable-script.dci  application-x-extension-fcstd.dci  application-x-font-ttf.dci  application-x-fusioncomp.dci  application-x-gettext-translation.dci  application-x-gzip.dci  application-x-iso.dci  application-x-kdenlive.dci  (+154 more)
(+8906 files in other folders)
